When bookmarking a view in the local collection category, also store (and restore when the bookmark is activated) the state of "show cover" and "show year"

BUG: 230562